--- a/src/ZrhAppSvcConsole/ZrhAppSvcConsole.csproj
+++ b/src/ZrhAppSvcConsole/ZrhAppSvcConsole.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>663944dd-9dee-493f-8415-53bed9675fa1</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+  </ItemGroup>
 
 </Project>
